discussion/kv_engine/156699/156699_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38978: Gather "dcp" stats group in a background task

The "dcp" stats group includes aggregated values which may become
expensive to collect if there are lots of dcp streams.

To avoid this processing holding up a front end thread, move this
aggregation to a task.

Change-Id: Iea9b901b8d27164a0f0141967361553f0596f784

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-02 12:48:48.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-02 12:51:56.000000000
Message: 
Patch Set 2: Code-Review-1

(1 comment)
Line:3921, engines/ep/src/ep_engine.cc -> We are essentially passing / capturing the cookie and ep-engine twice here - once via the lambda and once via the StatDCPTask ctor. 

This isn't incorrect, but it's inefficient and potentially confusing. Could you instead make them arguments of the callback function or similar?

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-02 13:09:35.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/134/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/83/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/82/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/82/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/77/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/77/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/82/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0076/0157]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4366 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2021-07-02T12:56:46.275Z] (103 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/82/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8987/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/86/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/82/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/85/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
